@@ -5,6 +5,7 @@ version 1.1
 fixed memory error in streaming c/blob retrieval (double free)
 print a warning statement if debugging is enabled if OCI_SUCCESS_WITH_INFO is
 returned by Oracle
+bind character values greater than 30K bytes long as a CLOB
 
 
 *************
